# django-pdf

./: .gitignore  README.md  pyproject.toml
django_pdf/: admin.py  apps.py  forms.py  models.py  pdf_template.py  pyproject.toml  urls.py  views.py
django_pdf/migrations/: 0001_initial.py
django_pdf/templates/django_pdf/: base.html
django_pdf/templates/django_pdf/dashboard/: index.html
django_pdf/templates/django_pdf/dashboard/htmx/: templates_list.html
django_pdf/templates/django_pdf/html_template/: base_template.html  index.html
django_pdf/templates/django_pdf/html_template/components/: context_schema.html  editor.html  top_bar.html
django_pdf/templates/django_pdf/html_template/js/: htmlTemplate.js.html
django_pdf/templates/django_pdf/js/: contextSchema.js.html  exampleContext.js.html  pdfViewer.js.html  template.js.html
django_pdf/templates/django_pdf/pdf_template/: index.html
django_pdf/templates/django_pdf/pdf_template/components/: context_schema.html  editor.html  pdf.html  top_bar.html
django_pdf/templates/django_pdf/pdf_template/js/: pdfTemplate.js.html  templateFileContent.js.html
test_app/: pyproject.toml
test_app/test_app/: asgi.py  settings.py  urls.py  wsgi.py
