[tool.poetry]
name = "django-pdf"
version = "0.1.0"
description = ""
authors = ["Tafadzwa Moyo <tmdewah@gmail.com>"]
readme = "README.md"
packages = [{include = "django_pdf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
xhtml2pdf = "^0.2.11"
form = "^0.0.1"
autoflake = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
