[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Tafadzwa Moyo <tmdewah@gmail.com>"]
readme = "README.md"
packages = [{include = "test_app"}]

[tool.poetry.dependencies]
python = "^3.11"
typeguard = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
